Fix react to align with DB updates
Also some misc css

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,6 +22,7 @@ list-style-type: none;
 padding: 0;
 margin-bottom: 1.5em;
 margin-left: 0;
+font-size: .75em;
 }
 
 .notfound h2 {
